--- a/tests/test_specificity_filter.ipynb
+++ b/tests/test_specificity_filter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,14 +23,14 @@
     "\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter import Blastn, Bowtie, Bowtie2, ExactMatches, BowtieSeedRegion, LigationRegionCreation, SeedRegionCreationStandard, SeedRegionCreationPercentage\n",
     "\n",
-    "from oligo_designer_toolsuite.IO._data_parser import read_oligos_DB_tsv\n",
+    "from oligo_designer_toolsuite.utils._data_parser import read_oligos_DB_tsv\n",
     "from oligo_designer_toolsuite.IO._database import CustomDB\n",
     "from oligo_designer_toolsuite.oligo_specificity_filter._specificity_filters import SpecificityFilter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -165,17 +165,19 @@
       "NOC2L, 28\n",
       "PLEKHN1, 454\n",
       "AGRN, 483\n",
-      "UBE2J2, 1351\n",
+      "UBE2J2, 1341\n",
       "DVL1, 164\n",
       "MIB2, 1010\n",
-      "LOC112268402_1, 0\n"
+      "LOC112268402_1, 0\n",
+      "{'NOC2L_21101': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959014], 'strand': '-', 'length': 30, 'GC_content': 50.0, 'melt_temp': 58.4, 'melt_temp_arm1': 38.98, 'melt_temp_arm2': 40.88, 'dif_melt_temp_arms': 1.9, 'ligation_site': 13.0}, 'NOC2L_21103': {'probe_sequence': Seq('GAATCCGAGTCCGAAAATTCTCCACAAGCG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958986], 'end': [959016], 'strand': '-', 'length': 30, 'GC_content': 50.0, 'melt_temp': 58.71, 'melt_temp_arm1': 42.65, 'melt_temp_arm2': 41.19, 'dif_melt_temp_arms': 1.46, 'ligation_site': 15.0}, 'NOC2L_21104': {'probe_sequence': Seq('AATCCGAGTCCGAAAATTCTCCACAAGCGG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958987], 'end': [959017], 'strand': '-', 'length': 30, 'GC_content': 50.0, 'melt_temp': 59.89, 'melt_temp_arm1': 41.93, 'melt_temp_arm2': 43.78, 'dif_melt_temp_arms': 1.85, 'ligation_site': 15.0}, 'NOC2L_21105': {'probe_sequence': Seq('ATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958988], 'end': [959018], 'strand': '-', 'length': 30, 'GC_content': 50.0, 'melt_temp': 60.66, 'melt_temp_arm1': 42.74, 'melt_temp_arm2': 44.24, 'dif_melt_temp_arms': 1.5, 'ligation_site': 16.0}, 'NOC2L_21106': {'probe_sequence': Seq('TCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958989], 'end': [959019], 'strand': '-', 'length': 30, 'GC_content': 53.33, 'melt_temp': 60.94, 'melt_temp_arm1': 43.01, 'melt_temp_arm2': 43.76, 'dif_melt_temp_arms': 0.75, 'ligation_site': 16.0}, 'NOC2L_21107': {'probe_sequence': Seq('CCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958990], 'end': [959020], 'strand': '-', 'length': 30, 'GC_content': 53.33, 'melt_temp': 60.94, 'melt_temp_arm1': 42.6, 'melt_temp_arm2': 44.24, 'dif_melt_temp_arms': 1.64, 'ligation_site': 16.0}, 'NOC2L_21206': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAGC'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959015], 'strand': '-', 'length': 31, 'GC_content': 51.61, 'melt_temp': 60.03, 'melt_temp_arm1': 43.06, 'melt_temp_arm2': 41.2, 'dif_melt_temp_arms': 1.86, 'ligation_site': 14.0}, 'NOC2L_21207': {'probe_sequence': Seq('CGAATCCGAGTCCGAAAATTCTCCACAAGCG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958985], 'end': [959016], 'strand': '-', 'length': 31, 'GC_content': 51.61, 'melt_temp': 60.06, 'melt_temp_arm1': 43.56, 'melt_temp_arm2': 43.28, 'dif_melt_temp_arms': 0.28, 'ligation_site': 14.0}, 'NOC2L_21208': {'probe_sequence': Seq('GAATCCGAGTCCGAAAATTCTCCACAAGCGG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958986], 'end': [959017], 'strand': '-', 'length': 31, 'GC_content': 51.61, 'melt_temp': 60.03, 'melt_temp_arm1': 43.66, 'melt_temp_arm2': 43.78, 'dif_melt_temp_arms': 0.12, 'ligation_site': 16.0}, 'NOC2L_21209': {'probe_sequence': Seq('AATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958987], 'end': [959018], 'strand': '-', 'length': 31, 'GC_content': 48.39, 'melt_temp': 60.61, 'melt_temp_arm1': 43.72, 'melt_temp_arm2': 44.24, 'dif_melt_temp_arms': 0.52, 'ligation_site': 17.0}, 'NOC2L_21210': {'probe_sequence': Seq('ATCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958988], 'end': [959019], 'strand': '-', 'length': 31, 'GC_content': 51.61, 'melt_temp': 60.8, 'melt_temp_arm1': 43.72, 'melt_temp_arm2': 43.76, 'dif_melt_temp_arms': 0.04, 'ligation_site': 17.0}, 'NOC2L_21211': {'probe_sequence': Seq('TCCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958989], 'end': [959020], 'strand': '-', 'length': 31, 'GC_content': 51.61, 'melt_temp': 61.64, 'melt_temp_arm1': 44.56, 'melt_temp_arm2': 44.24, 'dif_melt_temp_arms': 0.32, 'ligation_site': 17.0}, 'NOC2L_21312': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAGCG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959016], 'strand': '-', 'length': 32, 'GC_content': 53.12, 'melt_temp': 61.29, 'melt_temp_arm1': 43.06, 'melt_temp_arm2': 44.69, 'dif_melt_temp_arms': 1.63, 'ligation_site': 14.0}, 'NOC2L_21313': {'probe_sequence': Seq('CGAATCCGAGTCCGAAAATTCTCCACAAGCGG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958985], 'end': [959017], 'strand': '-', 'length': 32, 'GC_content': 53.12, 'melt_temp': 61.29, 'melt_temp_arm1': 46.48, 'melt_temp_arm2': 44.73, 'dif_melt_temp_arms': 1.75, 'ligation_site': 16.0}, 'NOC2L_21314': {'probe_sequence': Seq('GAATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958986], 'end': [959018], 'strand': '-', 'length': 32, 'GC_content': 50.0, 'melt_temp': 60.71, 'melt_temp_arm1': 44.56, 'melt_temp_arm2': 45.24, 'dif_melt_temp_arms': 0.68, 'ligation_site': 17.0}, 'NOC2L_21315': {'probe_sequence': Seq('AATCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958987], 'end': [959019], 'strand': '-', 'length': 32, 'GC_content': 50.0, 'melt_temp': 60.75, 'melt_temp_arm1': 44.59, 'melt_temp_arm2': 43.76, 'dif_melt_temp_arms': 0.83, 'ligation_site': 18.0}, 'NOC2L_21316': {'probe_sequence': Seq('ATCCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958988], 'end': [959020], 'strand': '-', 'length': 32, 'GC_content': 50.0, 'melt_temp': 61.48, 'melt_temp_arm1': 45.13, 'melt_temp_arm2': 44.24, 'dif_melt_temp_arms': 0.89, 'ligation_site': 18.0}, 'NOC2L_21419': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAGCGG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959017], 'strand': '-', 'length': 33, 'GC_content': 54.55, 'melt_temp': 62.46, 'melt_temp_arm1': 47.06, 'melt_temp_arm2': 46.33, 'dif_melt_temp_arms': 0.73, 'ligation_site': 15.0}, 'NOC2L_21420': {'probe_sequence': Seq('CGAATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958985], 'end': [959018], 'strand': '-', 'length': 33, 'GC_content': 51.52, 'melt_temp': 61.93, 'melt_temp_arm1': 46.48, 'melt_temp_arm2': 46.66, 'dif_melt_temp_arms': 0.18, 'ligation_site': 16.0}, 'NOC2L_21421': {'probe_sequence': Seq('GAATCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958986], 'end': [959019], 'strand': '-', 'length': 33, 'GC_content': 51.52, 'melt_temp': 60.84, 'melt_temp_arm1': 45.13, 'melt_temp_arm2': 45.91, 'dif_melt_temp_arms': 0.78, 'ligation_site': 18.0}, 'NOC2L_21422': {'probe_sequence': Seq('AATCCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958987], 'end': [959020], 'strand': '-', 'length': 33, 'GC_content': 48.48, 'melt_temp': 61.41, 'melt_temp_arm1': 44.59, 'melt_temp_arm2': 45.91, 'dif_melt_temp_arms': 1.32, 'ligation_site': 18.0}, 'NOC2L_21527': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959018], 'strand': '-', 'length': 34, 'GC_content': 52.94, 'melt_temp': 63.05, 'melt_temp_arm1': 48.91, 'melt_temp_arm2': 47.36, 'dif_melt_temp_arms': 1.55, 'ligation_site': 16.0}, 'NOC2L_21528': {'probe_sequence': Seq('CGAATCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958985], 'end': [959019], 'strand': '-', 'length': 34, 'GC_content': 52.94, 'melt_temp': 62.0, 'melt_temp_arm1': 47.19, 'melt_temp_arm2': 47.22, 'dif_melt_temp_arms': 0.03, 'ligation_site': 17.0}, 'NOC2L_21529': {'probe_sequence': Seq('GAATCCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958986], 'end': [959020], 'strand': '-', 'length': 34, 'GC_content': 50.0, 'melt_temp': 61.47, 'melt_temp_arm1': 45.86, 'melt_temp_arm2': 45.91, 'dif_melt_temp_arms': 0.05, 'ligation_site': 19.0}, 'NOC2L_21636': {'probe_sequence': Seq('CCGAATCCGAGTCCGAAAATTCTCCACAAGCGGAG'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958984], 'end': [959019], 'strand': '-', 'length': 35, 'GC_content': 54.29, 'melt_temp': 63.09, 'melt_temp_arm1': 48.91, 'melt_temp_arm2': 48.47, 'dif_melt_temp_arms': 0.44, 'ligation_site': 16.0}, 'NOC2L_21637': {'probe_sequence': Seq('CGAATCCGAGTCCGAAAATTCTCCACAAGCGGAGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958985], 'end': [959020], 'strand': '-', 'length': 35, 'GC_content': 51.43, 'melt_temp': 62.59, 'melt_temp_arm1': 47.19, 'melt_temp_arm2': 48.94, 'dif_melt_temp_arms': 1.75, 'ligation_site': 17.0}, 'NOC2L_21744': {'probe_sequence': Seq('GTCCGAATCCGAGTCCGAAAATTCTCCACAAGCGGA'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon2'], 'chromosome': '1', 'start': [958982], 'end': [959018], 'strand': '-', 'length': 36, 'GC_content': 52.78, 'melt_temp': 63.76, 'melt_temp_arm1': 47.04, 'melt_temp_arm2': 48.99, 'dif_melt_temp_arms': 1.95, 'ligation_site': 16.0}, 'NOC2L_24043': {'probe_sequence': Seq('agcatgAAAGACCAAACGTATcgagagctg'), 'transcript_id': ['NM_015658.4'], 'exon_id': ['NM_015658.4_exon19'], 'chromosome': '1', 'start': [944450], 'end': [944480], 'strand': '-', 'length': 30, 'GC_content': 46.67, 'melt_temp': 57.97, 'melt_temp_arm1': 40.79, 'melt_temp_arm2': 39.71, 'dif_melt_temp_arms': 1.08, 'ligation_site': 16.0}}\n"
      ]
     }
    ],
    "source": [
     "probes_updated = blast_filter.apply(probe_info_dict, file_transcriptome_fasta, n_jobs)\n",
     "for gene in probes_updated.keys():\n",
-    "    print(f\"{gene}, {len(list(probes_updated[gene].keys()))}\")"
+    "    print(f\"{gene}, {len(list(probes_updated[gene].keys()))}\")\n",
+    "print(probes_updated[\"NOC2L\"])"
    ]
   },
   {
@@ -536,63 +538,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
-      "Setting the index via positional argument will be deprecated in a future release. Please use -x option instead.\n",
+      "# reads processed: 3235\n",
+      "# reads with at least one alignment: 3235 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 34048 alignments\n",
       "# reads processed: 59\n",
       "# reads with at least one alignment: 59 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
       "Reported 59 alignments\n",
-      "# reads processed: 3235\n",
-      "# reads with at least one alignment: 3235 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 33348 alignments\n",
-      "# reads processed: 2960\n",
-      "# reads with at least one alignment: 2960 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 4389 alignments\n",
       "# reads processed: 5652\n",
       "# reads with at least one alignment: 5652 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 48707 alignments\n",
-      "# reads processed: 5736\n",
-      "# reads with at least one alignment: 5736 (100.00%)\n",
-      "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 9973 alignments\n",
+      "Reported 49738 alignments\n",
       "# reads processed: 2913\n",
       "# reads with at least one alignment: 2913 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 3971 alignments\n",
+      "Reported 4040 alignments\n",
       "# reads processed: 5284\n",
       "# reads with at least one alignment: 5284 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 6618 alignments\n",
+      "Reported 6730 alignments\n",
+      "# reads processed: 5736\n",
+      "# reads with at least one alignment: 5736 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 10151 alignments\n",
+      "# reads processed: 2960\n",
+      "# reads with at least one alignment: 2960 (100.00%)\n",
+      "# reads that failed to align: 0 (0.00%)\n",
+      "Reported 4428 alignments\n",
       "# reads processed: 10881\n",
       "# reads with at least one alignment: 10881 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 25742 alignments\n",
+      "Reported 30191 alignments\n",
       "# reads processed: 9285\n",
       "# reads with at least one alignment: 9285 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 74949 alignments\n",
+      "Reported 123248 alignments\n",
       "# reads processed: 8190\n",
       "# reads with at least one alignment: 8190 (100.00%)\n",
       "# reads that failed to align: 0 (0.00%)\n",
-      "Reported 192025 alignments\n"
+      "Reported 193617 alignments\n"
      ]
     },
     {
@@ -600,14 +592,14 @@
      "output_type": "stream",
      "text": [
       "WASH7P, 0\n",
-      "DDX11L1, 107\n",
+      "DDX11L1, 104\n",
       "TRNT, 59\n",
-      "NOC2L, 3657\n",
-      "PLEKHN1, 2403\n",
+      "NOC2L, 3541\n",
+      "PLEKHN1, 2361\n",
       "AGRN, 5284\n",
-      "UBE2J2, 7840\n",
-      "DVL1, 2792\n",
-      "MIB2, 9862\n",
+      "UBE2J2, 7748\n",
+      "DVL1, 2783\n",
+      "MIB2, 9792\n",
       "LOC112268402_1, 0\n"
      ]
     }
@@ -617,7 +609,7 @@
     "standard_seed_region = SeedRegionCreationStandard(start=5, end = 25)\n",
     "prec_seed_region = SeedRegionCreationPercentage(start=0.2, end = 0.8)\n",
     "\n",
-    "bowtie_seed_region = BowtieSeedRegion(dir_specificity, prec_seed_region)\n",
+    "bowtie_seed_region = BowtieSeedRegion(dir_specificity, ligation_seed_region)\n",
     "\n",
     "probe_info_dict=read_oligos_DB_tsv(file_probe_info)\n",
     "probes_updated = bowtie_seed_region.apply(probe_info_dict, file_transcriptome_fasta, n_jobs)\n",
