--- a/tests/test_DB.ipynb
+++ b/tests/test_DB.ipynb
@@ -78,13 +78,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:71: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:75: UserWarning: Annotation source not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:71: UserWarning: Annotation source not specified.\n",
       "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     }
@@ -107,32 +107,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list of all the genes in the DB:\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'keys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000008?line=2'>3</a>\u001b[0m custom\u001b[39m.\u001b[39mwrite_oligos_DB(\u001b[39mformat\u001b[39m \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mgtf\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000008?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mlist of all the genes in the DB:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000008?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(custom\u001b[39m.\u001b[39;49moligos_DB\u001b[39m.\u001b[39;49mkeys())\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000008?line=5'>6</a>\u001b[0m gene \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(custom\u001b[39m.\u001b[39moligos_DB\u001b[39m.\u001b[39mkeys())[\u001b[39m0\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000008?line=6'>7</a>\u001b[0m probe \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(custom\u001b[39m.\u001b[39moligos_DB[gene]\u001b[39m.\u001b[39mkeys())[\u001b[39m0\u001b[39m]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'keys'"
+      "list of all the genes in the DB:\n",
+      "dict_keys(['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN', 'UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1'])\n",
+      "Features of the first probe of the DB:\n",
+      "{'probe_sequence': Seq('GCACCATGACTCCTGTGAGGATGCAGCACT'), 'transcript_id': ['NR_024540.1', 'NR_024540.1'], 'exon_id': ['NR_024540.1_exon2', 'NR_024540.1_exon2_NR_024540.1_exon1'], 'chromosome': '1', 'start': [24737, 24891], 'end': [24767, 24921], 'strand': '-', 'length': 30}\n"
      ]
     }
    ],
    "source": [
     "genes = ['WASH7P', 'DDX11L1', 'TRNT', 'NOC2L', 'PLEKHN1', 'AGRN','UBE2J2', 'DVL1', 'MIB2', 'LOC112268402_1' ]\n",
+    "custom.create_reference_DB()\n",
     "custom.create_oligos_DB(genes = genes, n_jobs = 10)\n",
-    "custom.write_oligos_DB(format = 'gtf')\n",
+    "custom.write_oligos_DB(format = 'tsv')\n",
     "print(\"list of all the genes in the DB:\")\n",
     "print(custom.oligos_DB.keys())\n",
     "gene = list(custom.oligos_DB.keys())[0]\n",
@@ -160,7 +153,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000010?line=0'>1</a>\u001b[0m dir_output \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#ch0000010?line=1'>2</a>\u001b[0m custom\u001b[39m.\u001b[39;49mread_oligos_DB_tsv(dir_output \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.tsv\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32m/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#X13sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dir_output \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/home/francesco/Desktop/Work/oligo-designer-toolsuite/output/annotations\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#X13sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m custom\u001b[39m.\u001b[39;49mread_oligos_DB_tsv(dir_output \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/oligo_DB_unknown_unknown_Custom_release_unknown_gene_transcript.tsv\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'CustomDB' object has no attribute 'read_oligos_DB_tsv'"
      ]
     }
@@ -250,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('oligo': conda)",
+   "display_name": "Python 3.10.4 ('oligo')",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +262,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "797cf0fae3aa9496144015db7114399f14bdbbab56900ed16736529315e01dbb"
+    "hash": "7ff94d65164c54a2126c7dc0869520902e3a005d5dddb9f8c3667ad0fd9373c9"
    }
   }
  },
