padlock sequence creation

--- a/tests/test_probesets.ipynb
+++ b/tests/test_probesets.ipynb
@@ -26,6 +26,9 @@
     "from oligo_designer_toolsuite.oligo_selection._resolve_overlapping_oligos import ProbesetGenerator\n",
     "from oligo_designer_toolsuite.oligo_selection._probe_scoring import PadlockProbeScoring, PadlockSetScoring\n",
     "from oligo_designer_toolsuite.oligo_selection._heuristic_methods import padlock_heuristic_selection\n",
+    "from oligo_designer_toolsuite.experiment_specific import PadlockSequenceDesigner\n",
+    "\n",
+    "from Bio.SeqUtils import MeltingTemp as mt\n",
     "\n",
     "os.chdir('../' )\n",
     "cwd = os.getcwd()\n",
@@ -64,13 +67,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:59: UserWarning: Species not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:62: UserWarning: Species not specified.\n",
       "  warnings.warn(\"Species not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:63: UserWarning: Genome assembly not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:66: UserWarning: Genome assembly not specified.\n",
       "  warnings.warn(f\"Genome assembly not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:67: UserWarning: Annotation release not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:70: UserWarning: Annotation release not specified.\n",
       "  warnings.warn(f\"Annotation release not specified.\")\n",
-      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:71: UserWarning: Annotation source not specified.\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:74: UserWarning: Annotation source not specified.\n",
       "  warnings.warn(f\"Annotation source not specified.\")\n"
      ]
     },
@@ -78,22 +81,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "<class 'dict'>\n",
-      "time to process: 2.2627978324890137\n"
+      "time to process: 1.7047483921051025\n"
      ]
     }
    ],
    "source": [
-    "database = CustomDB(probe_length_min = 30, probe_length_max = 40, filters = None, dir_output=dir_output, file_annotation=annotation, file_sequence=sequence)\n",
+    "database = CustomDB(probe_length_min = 30, probe_length_max = 40, dir_output=dir_output, file_annotation=annotation, file_sequence=sequence)\n",
     "database.read_oligos_DB(format = 'tsv', file_oligos_DB_tsv = file_oligos)\n",
     "#enalrge teh DB\n",
     "genes = list(database.oligos_DB.keys())\n",
@@ -104,44 +97,67 @@
     "set_scoring = PadlockSetScoring()\n",
     "n_jobs = 12\n",
     "probeset_generator = ProbesetGenerator(n_probes_per_gene = 5, \n",
-    "                                        min_n_probes_per_gene = 2, DB = database, \n",
+    "                                        min_n_probes_per_gene = 2,\n",
     "                                        probes_scoring = padlock_scoring, \n",
     "                                        heurustic_selection = padlock_heuristic_selection, \n",
     "                                        set_scoring=set_scoring,\n",
-    "                                        n_jobs=n_jobs\n",
     "                                    )\n",
     "start = time.time()\n",
-    "database = probeset_generator.get_probe_sets(n_sets=100)\n",
+    "database = probeset_generator.get_probe_sets(database, n_sets=100, n_jobs=5)\n",
     "print(f'time to process: {time.time() - start}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function apply in module oligo_designer_toolsuite.oligo_selection._probe_scoring:\n",
-      "\n",
-      "apply(self, probes, probes_indices)\n",
-      "    Scores all the probes using the defiend scoring function. The scores are both saved in the dictionary\n",
-      "    and in a pandas.Series. The latter is generated because it is the fastest way to generate the sets.\n",
-      "    \n",
-      "    :param probes: dictionary containing the probes\n",
-      "    :type probes: dict\n",
-      "    :param probes_indices: list of the indices of the probes used as a reference to keep the ordering of the probes consistent\n",
-      "    :type probes_indices: np.array\n",
-      "    :return: updated dictionary of the probes, series with the computed scores\n",
-      "    :rtype: dict, pandas.Series\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "help(PadlockProbeScoring.apply)"
+    "Now we create the  padlock probes probes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# define the necessary parameters\n",
+    "Tm_parameters = {\n",
+    "\"check\": True,\n",
+    "\"strict\": True,\n",
+    "\"c_seq\": None,\n",
+    "\"shift\": 0,\n",
+    "\"nn_table\": getattr(mt, \"DNA_NN3\"),\n",
+    "\"tmm_table\": getattr(mt, \"DNA_TMM1\"),\n",
+    "\"imm_table\": getattr(mt, \"DNA_IMM1\"),\n",
+    "\"de_table\": getattr(mt, \"DNA_DE1\"),\n",
+    "\"dnac1\": 50,  # [nM]\n",
+    "\"dnac2\": 0,\n",
+    "\"selfcomp\": False,\n",
+    "\"dNTPs\": 0,\n",
+    "\"saltcorr\": 7,\n",
+    "\"Na\": 39,  # [mM]\n",
+    "\"K\": 0,  # [mM]\n",
+    "\"Tris\": 0,  # [mM]\n",
+    "\"Mg\": 0,  # [mM]\n",
+    "}\n",
+    "\n",
+    "Tm_correction_parameters = {\n",
+    "\"DMSO\": 0,\n",
+    "\"DMSOfactor\": 0.75,\n",
+    "\"fmdfactor\": 0.65,\n",
+    "\"fmdmethod\": 1,\n",
+    "\"GC\": None,\n",
+    "\"fmd\": 30,\n",
+    "}\n",
+    "\n",
+    "detect_oligo_length_min = 18 #min length of detection oligo\n",
+    "detect_oligo_length_max = 25 #max length of detection oligo\n",
+    "detect_oligo_Tm_opt = 32\n",
+    "\n",
+    "padlock_sequence_designer = PadlockSequenceDesigner(detect_oligo_length_min, detect_oligo_length_max, detect_oligo_Tm_opt, Tm_parameters, Tm_correction_parameters)\n",
+    "padlock_sequence_designer.design_padlocks(database)"
    ]
   }
  ],
