--- a/tests/test_DB.ipynb
+++ b/tests/test_DB.ipynb
@@ -44,20 +44,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:424: UserWarning: No species defined. Using default species human!\n",
+      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:428: UserWarning: No annotation release defined. Using default release current!\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 28] No space left on device",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb Cell 4\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/francesco/Desktop/Work/oligo-designer-toolsuite/tests/test_DB.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m ncbi \u001b[39m=\u001b[39m NcbiDB(probe_length_min \u001b[39m=\u001b[39;49m \u001b[39m20\u001b[39;49m, probe_length_max\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m, dir_output\u001b[39m=\u001b[39;49mdir_output)\n",
+      "File \u001b[0;32m~/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:438\u001b[0m, in \u001b[0;36mNcbiDB.__init__\u001b[0;34m(self, probe_length_min, probe_length_max, species, annotation_release, n_jobs, dir_output, min_probes_per_gene)\u001b[0m\n\u001b[1;32m    436\u001b[0m ftp \u001b[39m=\u001b[39m FTPLoaderNCBI(dir_annotation, species, annotation_release)\n\u001b[1;32m    437\u001b[0m file_annotation, genome_assembly \u001b[39m=\u001b[39m ftp\u001b[39m.\u001b[39mdownload_files(\u001b[39m\"\u001b[39m\u001b[39mgtf\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m--> 438\u001b[0m file_sequence, _ \u001b[39m=\u001b[39m ftp\u001b[39m.\u001b[39;49mdownload_files(\u001b[39m\"\u001b[39;49m\u001b[39mfasta\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m    440\u001b[0m \u001b[39msuper\u001b[39m()\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m(\n\u001b[1;32m    441\u001b[0m     probe_length_min,\n\u001b[1;32m    442\u001b[0m     probe_length_max,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    451\u001b[0m     min_probes_per_gene,\n\u001b[1;32m    452\u001b[0m )\n",
+      "File \u001b[0;32m~/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/utils/_ftp_loader.py:384\u001b[0m, in \u001b[0;36mFTPLoaderNCBI.download_files\u001b[0;34m(self, file_type, mapping)\u001b[0m\n\u001b[1;32m    380\u001b[0m ftp_directory, ftp_file, ftp_file_chr_mapping, assembly_name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_params(\n\u001b[1;32m    381\u001b[0m     file_type\n\u001b[1;32m    382\u001b[0m )\n\u001b[1;32m    383\u001b[0m mapping \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_download_mapping_chr_names(ftp_directory, ftp_file_chr_mapping)\n\u001b[0;32m--> 384\u001b[0m output_file \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdownload_and_decompress(\n\u001b[1;32m    385\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mftp_link, ftp_directory, ftp_file\n\u001b[1;32m    386\u001b[0m )\n\u001b[1;32m    388\u001b[0m \u001b[39mif\u001b[39;00m file_type\u001b[39m.\u001b[39mcasefold() \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mgtf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mcasefold():\n\u001b[1;32m    389\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_map_chr_names_gene_gtf(output_file, mapping)\n",
+      "File \u001b[0;32m~/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/utils/_ftp_loader.py:82\u001b[0m, in \u001b[0;36mBaseFtpLoader.download_and_decompress\u001b[0;34m(self, ftp_link, ftp_directory, file_name)\u001b[0m\n\u001b[1;32m     75\u001b[0m \u001b[39m\"\"\"Download genome sequence from ftp server and unzip file.\u001b[39;00m\n\u001b[1;32m     76\u001b[0m \n\u001b[1;32m     77\u001b[0m \u001b[39m:return: Path to downloaded file.\u001b[39;00m\n\u001b[1;32m     78\u001b[0m \u001b[39m:rtype: string\u001b[39;00m\n\u001b[1;32m     79\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     81\u001b[0m file_download \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdownload(ftp_link, ftp_directory, file_name)\n\u001b[0;32m---> 82\u001b[0m file_unzipped \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdecompress_gzip(file_download)\n\u001b[1;32m     84\u001b[0m \u001b[39mreturn\u001b[39;00m file_unzipped\n",
+      "File \u001b[0;32m~/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/utils/_ftp_loader.py:69\u001b[0m, in \u001b[0;36mBaseFtpLoader.decompress_gzip\u001b[0;34m(self, file_gzip)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[39mwith\u001b[39;00m gzip\u001b[39m.\u001b[39mopen(file_gzip, \u001b[39m\"\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f_in:\n\u001b[1;32m     68\u001b[0m     \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(file_output, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m f_out:\n\u001b[0;32m---> 69\u001b[0m         shutil\u001b[39m.\u001b[39;49mcopyfileobj(f_in, f_out)\n\u001b[1;32m     70\u001b[0m os\u001b[39m.\u001b[39mremove(file_gzip)\n\u001b[1;32m     72\u001b[0m \u001b[39mreturn\u001b[39;00m file_output\n",
+      "File \u001b[0;32m~/miniconda3/envs/oligo/lib/python3.10/shutil.py:198\u001b[0m, in \u001b[0;36mcopyfileobj\u001b[0;34m(fsrc, fdst, length)\u001b[0m\n\u001b[1;32m    196\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m buf:\n\u001b[1;32m    197\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m--> 198\u001b[0m fdst_write(buf)\n",
+      "\u001b[0;31mOSError\u001b[0m: [Errno 28] No space left on device"
+     ]
+    }
+   ],
    "source": [
-    "#ncbi = NcbiDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
+    "ncbi = NcbiDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:496: UserWarning: No species defined. Using default species human!\n",
+      "  warnings.warn(f\"No species defined. Using default species {species}!\")\n",
+      "/home/francesco/Desktop/Work/oligo-designer-toolsuite/oligo_designer_toolsuite/IO/_database.py:500: UserWarning: No annotation release defined. Using default release current!\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "#ensembl = EnsemblDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output, filters = [])"
+    "ensembl = EnsemblDB(probe_length_min = 20, probe_length_max=30, dir_output=dir_output)"
    ]
   },
   {
